# PRP-framework-embedded

./: AGENTS.md  CLAUDE.md  README-for-DUMMIES.md  README.md  docs_map.json  pyproject.toml
.github/agents/: code-reviewer.md  code-simplifier.md  codebase-analyst.md  codebase-explorer.md  comment-analyzer.md  docs-impact-agent.md  gpui-researcher.md  pr-test-analyzer.md  silent-failure-hunter.md  type-design-analyzer.md  web-researcher.md
.github/agents_md_files/: AGENTS-JAVA-MAVEN.md  AGENTS-NEXTJS-15.md  AGENTS-PYTHON-BASIC.md  HOW-TO-WRITE-AGENT.md
.github/ai_docs/: prp-methodology.md
.github/hooks/: README.md  prp-ralph-stop.sh
.github/prompts/: prp-codebase-question.prompt.md  prp-commit.prompt.md  prp-debug.prompt.md  prp-implement.prompt.md  prp-issue-fix.prompt.md  prp-issue-investigate.prompt.md  prp-plan.prompt.md  prp-pr.prompt.md  prp-prd.prompt.md  prp-ralph-cancel.prompt.md  prp-ralph.prompt.md  prp-review-agents.prompt.md  prp-review.prompt.md
.github/scripts/: prp_workflow.py
.github/templates/: README.md  prp-commit.prompt-output-template.md  (+20 more)
agents_md_files/: AGENTS-ASTRO.md  AGENTS-JAVA-GRADLE.md  AGENTS-NODE.md  AGENTS-RUST.md  AGENTS-ZEPHYR.md  HOW-TO-WRITE-AGENT.md
claude_md_files/: CLAUDE-ASTRO.md  CLAUDE-JAVA-GRADLE.md  CLAUDE-JAVA-MAVEN.md  CLAUDE-NEXTJS-15.md  CLAUDE-NODE.md  CLAUDE-PYTHON-BASIC.md  CLAUDE-REACT.md  CLAUDE-RUST.md
copilot_md_files/: COPILOT-REACT.md  copilot-migration-guide.md  copilot-prp-quickstart.md  copilot-prp-troubleshooting.md
tests/: test_deprecation_headers.py  test_doc_mapping.py  test_docs_links.py
(+77 files in other folders)
