[project]
name = "PRP-library"
version = "0.1.0"
description = "Library of assets and prompts for Ai Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mdformat>=1.0.0",
    "mypy>=1.20.0",
    "pymarkdownlnt>=0.9.36",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "ruff>=0.15.8",
]
